# sudoku

./: .gitignore  .pre-commit-config.yaml  README.md  TODO.md
.github/workflows/: learn-github-actions.yml  workflow-for-python.yml
DATA/: NearValidSolution.txt  diag.txt  grid.txt  invalidNumber.txt  invalidNumber2.txt  invalidSize.txt  invalidSize2.txt  invalidSize3.txt  invalidSolution.txt  validSolution.txt
cpp/: CMakeLists.txt  Doxyfile  README.md
cpp/include/sudoku/: grid.h  grid.hpp  solver.h
cpp/src/: cli.cpp  qt.cpp
cpp/src/sudoku/: cli.cpp  grid.cpp  qt.cpp  solver.cpp
cpp/tests/: grid.cpp  t_grid.cpp  t_main.cpp  t_solver.cpp  t_sudoku.cpp
impl/python/: README.md  TODO.md  environment.yaml  pytest.ini
impl/python/.devcontainer/: Dockerfile  devcontainer.json  noop.txt
impl/python/app/: solver.py
impl/python/sudoku/: generator.py  grid.py  loader.py  validity.py
impl/python/sudoku/generator/: full_grid_generator.py  partial_grid_generator.py
impl/python/sudoku/multisolver/: multisolver.py
impl/python/sudoku/solver/: algo_X.py  backtracking.py  solver.py
impl/python/sudoku/solver/algo_X_impl/: algo_X_impl.py
impl/python/test/: test_generator.py  test_grid.py  test_loader.py  test_validity.py
impl/python/test/generator/: test_full_grid_generator.py  test_partial_grid_generator.py
impl/python/test/multisolver/: test_multisolver.py
impl/python/test/solver/: test_algo_X.py  test_backtracking.py  test_solver.py
impl/python/test/solver/algo_X_impl/: test_algo_X_impl.py
js/: README.md  index.html
js/css/: style.css
python/: README.md  cli.py  conda.yml  gui.py  sudoku.py
python/doc/source/: conf.py  index.rst  module.rst
python/sudoku/: __init__.py  generator.py  grid.py  loader.py  main.py  solver.py  tmp.py
python/tests/: __init__.py  test_generator.py  test_grid.py  test_loader.py  test_solver.py
